tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__SodiumSulfide-AAAAAAAAAAAAAAAAAAAGdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1652,
  "prerequisites": [
    2448
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combine Sodium and Sulfur to get Sodium Sulfide.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lSodium Sulfide",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2448
  ],
  "rewards": [],
  "tasks": []
}
