tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__Tier4EV-AAAAAAAAAAAAAAAAAAAAsA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 176,
  "prerequisites": [
    1014,
    860
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The main goal here is to get a tier 2 rocket, and reach Mars. You also might want to rethink your power setup, as more and more machines will be upgraded. This quest set will teach you about a couple of options you have regarding power production.\n\nMultiblock goals includes quests for the large gas turbine, large combustion engine, and multiblock ore drill.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lTier 4 (EV)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "tierthemes:ev",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1014,
    860
  ],
  "rewards": [],
  "tasks": []
}
