tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__TungstateProcess-AAAAAAAAAAAAAAAAAAALSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2889,
  "prerequisites": [
    2980
  ],
  "properties": {
    "auto_claim": false,
    "desc": "First, let's turn our Tungstate into Scheelite. When you can get Scheelite ore, you can just skip this step.\n\nNote that if you're processing Huebnerite or Ferberite from ross128b or 128ba, the first step is slightly different.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lTungstate Processing - Step 1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2980
  ],
  "rewards": [],
  "tasks": []
}
