tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__TungstateProcess-AAAAAAAAAAAAAAAAAAALSg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2890,
  "prerequisites": [
    2889
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Next up is Tungsten Trioxide. Note that you got back all of the Calcium Chloride. If you process Scheelite ore at all, you'll want to set up an electrolyzer.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lTungstate Processing - Step 2",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2889
  ],
  "rewards": [],
  "tasks": []
}
