tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__VinylAcetate-AAAAAAAAAAAAAAAAAAABzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 461,
  "prerequisites": [
    176,
    852
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Graphene is required for IV motors. This organic compound is just a stepping stone.\n\n§6Already automated Graphene? Hold 128 dust to complete this questline.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lVinyl Acetate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    852
  ],
  "rewards": [],
  "tasks": []
}
